--- a/public/gcintranet/ajax/custommenu-eng.html
+++ b/public/gcintranet/ajax/custommenu-eng.html
@@ -7,42 +7,42 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <h2>Topics menu</h2>
   <div class="row">
     <ul class="list-inline menu" role="menubar">
-      <li role="presentation"><a href="#" class="item">Menu item 1</a>
+      <li role="none"><a href="#" class="item">Menu item 1</a>
         <ul class="sm list-unstyled" id="project" role="menu">
-          <li><a href="#">Menu item 1-1</a></li>
-          <li><a href="#">Menu item 1-2</a></li>
-          <li><a href="#">Menu item 1-3</a></li>
-          <li><a href="#">Menu item 1-4</a></li>
-          <li><a href="#">Menu item 1-5</a></li>
-          <li class="slflnk"><a href="#">Menu item 1 - More</a></li>
+          <li role="none"><a href="#">Menu item 1-1</a></li>
+          <li role="none"><a href="#">Menu item 1-2</a></li>
+          <li role="none"><a href="#">Menu item 1-3</a></li>
+          <li role="none"><a href="#">Menu item 1-4</a></li>
+          <li role="none"><a href="#">Menu item 1-5</a></li>
+          <li role="none" class="slflnk"><a href="#">Menu item 1 - More</a></li>
         </ul>
       </li>
-      <li role="presentation"><a href="#" class="item">Menu item 2</a>
+      <li role="none"><a href="#" class="item">Menu item 2</a>
         <ul class="sm list-unstyled" id="implement" role="menu">
-          <li><a href="#">Menu item 2-1</a></li>
-          <li><a href="#">Menu item 2-2</a></li>
-          <li><a href="#">Menu item 2-3</a></li>
-          <li><a href="#">Menu item 2-4</a></li>
-          <li><a href="#">Menu item 2-5</a></li>
-          <li class="slflnk"><a href="#">Menu item 2 - More</a></li>
+          <li role="none"><a href="#">Menu item 2-1</a></li>
+          <li role="none"><a href="#">Menu item 2-2</a></li>
+          <li role="none"><a href="#">Menu item 2-3</a></li>
+          <li role="none"><a href="#">Menu item 2-4</a></li>
+          <li role="none"><a href="#">Menu item 2-5</a></li>
+          <li role="none" class="slflnk"><a href="#">Menu item 2 - More</a></li>
         </ul>
       </li>
-      <li role="presentation"><a href="#" class="item">Menu item 3</a>
+      <li role="none"><a href="#" class="item">Menu item 3</a>
         <ul class="sm list-unstyled" id="contribute" role="menu">
-          <li><a href="#">Menu item 3-1</a></li>
-          <li><a href="#">Menu item 3-2</a></li>
-          <li><a href="#">Menu item 3-3</a></li>
-          <li><a href="#">Menu item 3-4</a></li>
-          <li><a href="#">Menu item 3-5</a></li>
-          <li class="slflnk"><a href="#">Menu item 3 - More</a></li>
+          <li role="none"><a href="#">Menu item 3-1</a></li>
+          <li role="none"><a href="#">Menu item 3-2</a></li>
+          <li role="none"><a href="#">Menu item 3-3</a></li>
+          <li role="none"><a href="#">Menu item 3-4</a></li>
+          <li role="none"><a href="#">Menu item 3-5</a></li>
+          <li role="none" class="slflnk"><a href="#">Menu item 3 - More</a></li>
         </ul>
       </li>
-      <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">GCTools</a>
+      <li role="none" class="hidden-md hidden-lg"><a href="#mnuTools" class="item">GCTools</a>
         <ul class="sm list-unstyled" id="mnuTools" role="menu">
-          <li><a href="https://gcconnex.gc.ca/splash/"><span class="bold-gc">GC</span>connex</a></li>
-          <li><a href="https://www.gcpedia.gc.ca/wiki/?setlang=en"><span class="bold-gc">GC</span>pedia</a></li>
-          <li><a href="https://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002"><span class="bold-gc">GC</span>directory</a></li>
-          <li><a href="https://gccollab.ca/splash/"><span class="bold-gc">GC</span>collab</a></li>
+          <li role="none"><a href="https://gcconnex.gc.ca/splash/"><span class="bold-gc">GC</span>connex</a></li>
+          <li role="none"><a href="https://www.gcpedia.gc.ca/wiki/?setlang=en"><span class="bold-gc">GC</span>pedia</a></li>
+          <li role="none"><a href="https://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002"><span class="bold-gc">GC</span>directory</a></li>
+          <li role="none"><a href="https://gccollab.ca/splash/"><span class="bold-gc">GC</span>collab</a></li>
         </ul>
       </li>
     </ul>
