--- a/public/gcintranet/ajax/custommenu-fra.html
+++ b/public/gcintranet/ajax/custommenu-fra.html
@@ -7,42 +7,42 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <h2 class="wb-inv">Menu des sujets</h2>
   <div class="row">
     <ul class="list-inline menu" role="menubar">
-      <li role="presentation"><a href="#" class="item">Élément de menu 1</a>
+      <li role="none"><a href="#" class="item">Élément de menu 1</a>
         <ul class="sm list-unstyled" id="project" role="menu">
-          <li><a href="#">Élément de menu 1-1</a></li>
-          <li><a href="#">Élément de menu 1-2</a></li>
-          <li><a href="#">Élément de menu 1-3</a></li>
-          <li><a href="#">Élément de menu 1-4</a></li>
-          <li><a href="#">Élément de menu 1-5</a></li>
-          <li class="slflnk"><a href="#">Élément de menu 1 - Autres</a></li>
+          <li role="none"><a href="#">Élément de menu 1-1</a></li>
+          <li role="none"><a href="#">Élément de menu 1-2</a></li>
+          <li role="none"><a href="#">Élément de menu 1-3</a></li>
+          <li role="none"><a href="#">Élément de menu 1-4</a></li>
+          <li role="none"><a href="#">Élément de menu 1-5</a></li>
+          <li role="none" class="slflnk"><a href="#">Élément de menu 1 - Autres</a></li>
         </ul>
       </li>
-      <li role="presentation"><a href="#" class="item">Élément de menu 2</a>
+      <li role="none"><a href="#" class="item">Élément de menu 2</a>
         <ul class="sm list-unstyled" id="implement" role="menu">
-          <li><a href="#">Élément de menu 2-1</a></li>
-          <li><a href="#">Élément de menu 2-2</a></li>
-          <li><a href="#">Élément de menu 2-3</a></li>
-          <li><a href="#">Élément de menu 2-4</a></li>
-          <li><a href="#">Élément de menu 2-5</a></li>
-          <li class="slflnk"><a href="#">Élément de menu - Autres</a></li>
+          <li role="none"><a href="#">Élément de menu 2-1</a></li>
+          <li role="none"><a href="#">Élément de menu 2-2</a></li>
+          <li role="none"><a href="#">Élément de menu 2-3</a></li>
+          <li role="none"><a href="#">Élément de menu 2-4</a></li>
+          <li role="none"><a href="#">Élément de menu 2-5</a></li>
+          <li role="none" class="slflnk"><a href="#">Élément de menu - Autres</a></li>
         </ul>
       </li>
-      <li role="presentation"><a href="#" class="item">Élément de menu 3</a>
+      <li role="none"><a href="#" class="item">Élément de menu 3</a>
         <ul class="sm list-unstyled" id="contribute" role="menu">
-          <li><a href="#">Élément de menu 3-1</a></li>
-          <li><a href="#">Élément de menu 3-2</a></li>
-          <li><a href="#">Élément de menu 3-3</a></li>
-          <li><a href="#">Élément de menu 3-4</a></li>
-          <li><a href="#">Élément de menu 3-5</a></li>
-          <li class="slflnk"><a href="#">Élément de menu - Autres</a></li>
+          <li role="none"><a href="#">Élément de menu 3-1</a></li>
+          <li role="none"><a href="#">Élément de menu 3-2</a></li>
+          <li role="none"><a href="#">Élément de menu 3-3</a></li>
+          <li role="none"><a href="#">Élément de menu 3-4</a></li>
+          <li role="none"><a href="#">Élément de menu 3-5</a></li>
+          <li role="none" class="slflnk"><a href="#">Élément de menu - Autres</a></li>
         </ul>
       </li>
-      <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">OutilsGC</a>
+      <li role="none" class="hidden-md hidden-lg"><a href="#mnuTools" class="item">OutilsGC</a>
         <ul class="sm list-unstyled" id="mnuTools" role="menu">
-          <li><a href="https://gcconnex.gc.ca"><span class="bold-gc">GC</span>connex</a></li>
-          <li><a href="https://www.gcpedia.gc.ca/wiki/?setlang=fr"><span class="bold-gc">GC</span>pédia</a></li>
-          <li><a href="https://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002"><span class="bold-gc">GC</span>annuaire</a></li>
-          <li><a href="https://gccollab.ca/splash/"><span class="bold-gc">GC</span>collab</a></li>
+          <li role="none"><a href="https://gcconnex.gc.ca"><span class="bold-gc">GC</span>connex</a></li>
+          <li role="none"><a href="https://www.gcpedia.gc.ca/wiki/?setlang=fr"><span class="bold-gc">GC</span>pédia</a></li>
+          <li role="none"><a href="https://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002"><span class="bold-gc">GC</span>annuaire</a></li>
+          <li role="none"><a href="https://gccollab.ca/splash/"><span class="bold-gc">GC</span>collab</a></li>
         </ul>
       </li>
     </ul>
