--- a/public/gcweb/ajax/appmenu-en.html
+++ b/public/gcweb/ajax/appmenu-en.html
@@ -6,15 +6,15 @@
 		<h2 class="wb-inv">Main navigation menu</h2>
 		<div class="row">
 			<ul class="list-inline menu" role="menubar">
-				<li role="presentation"><a href="#" class="item">Overview</a></li>
-				<li role="presentation"><a href="#" class="item">First section</a></li>
-				<li role="presentation"><a href="#s2" class="item">Second section</a>
+				<li role="none"><a href="#" class="item">Overview</a></li>
+				<li role="none"><a href="#" class="item">First section</a></li>
+				<li role="none"><a href="#s2" class="item">Second section</a>
 					<ul class="sm list-unstyled" id="s2" role="menu">
-						<li><a href="#">Subsection 1</a></li>
-						<li><a href="#">Subsection 2</a></li>
-						<li><a href="#">Subsection 3</a></li>
-						<li><a href="#">Subsection 4</a></li>
-						<li class="slflnk"><a href="#">Second section - More</a>
+						<li role="none"><a href="#">Subsection 1</a></li>
+						<li role="none"><a href="#">Subsection 2</a></li>
+						<li role="none"><a href="#">Subsection 3</a></li>
+						<li role="none"><a href="#">Subsection 4</a></li>
+						<li role="none" class="slflnk"><a href="#">Second section - More</a>
 					</ul>
 				</li>
 			</ul>
