--- a/public/gcweb/ajax/appmenu-fr.html
+++ b/public/gcweb/ajax/appmenu-fr.html
@@ -6,15 +6,15 @@
 		<h2 class="wb-inv">Menu de navigation principal</h2>
 		<div class="row">
 			<ul class="list-inline menu" role="menubar">
-				<li><a href="#" class="item">Aperçu</a></li>
-				<li><a href="#" class="item">Première section</a></li>
-				<li><a href="#s2" class="item">Deuxième section</a>
+				<li role="none"><a href="#" class="item">Aperçu</a></li>
+				<li role="none"><a href="#" class="item">Première section</a></li>
+				<li role="none"><a href="#s2" class="item">Deuxième section</a>
 					<ul class="sm list-unstyled" id="s2" role="menu">
-						<li><a href="#">Sous-section 1</a></li>
-						<li><a href="#">Sous-section 2</a></li>
-						<li><a href="#">Sous-section 3</a></li>
-						<li><a href="#">Sous-section 4</a></li>
-						<li class="slflnk"><a href="#">Second section - Autres</a>
+						<li role="none"><a href="#">Sous-section 1</a></li>
+						<li role="none"><a href="#">Sous-section 2</a></li>
+						<li role="none"><a href="#">Sous-section 3</a></li>
+						<li role="none"><a href="#">Sous-section 4</a></li>
+						<li role="none" class="slflnk"><a href="#">Second section - Autres</a>
 					</ul>
 				</li>
 			</ul>
